--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,7 @@
 body {
-  background-color: red;
-  font-weight: 400;
-  font-family: 'MyFont';
-
-}
-
-h1 {
-  color: #fff;
-}
-
-.container {
-  width: 100px;
-  height: 100px;
   background-color: bisque;
-  margin: 10px;
-  text-align: center;
-  line-height: 100px;
 }
 
-.test {
-  width: 100px;
-  height: 100px;
-  background-color: blue;
-  margin: 10px;
-  text-align: center;
-  line-height: 100px;
-  color: #fff;
-}
-
-@font-face {
-  font-family: 'MyFont';
-  src: url('./my-font.woff2') format('woff2'),
-    url('./my-font.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
+.hello {
+  color: red;
 }
